# yandex-analysis-store

./: .gitignore  README.md  README_ENG.md  README_RU.md  config.py  docker-compose.yml  environment.env
app/: Dockerfile  __init__.py  config.py  models.py  pyproject.toml  resources.py
app/project/: environment.py  models.py  resources.py
app/static/css/: styles.css
app/templates/: index.html
app/tests/: tests.py
docker/nginx/: app.conf
docker/poetry/: pyproject.toml
