[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Dmitry <flymedllva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
flask = "^1.1.1"
Flask-RESTful = "^0.3.7"
Flask-SQLAlchemy = "^2.4.0"
gunicorn = "^19.9.0"
psycopg2-binary = "^2.8.3"
redis = "^3.2.1"
celery = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
